dashboard-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  selector:
    app: dashboard
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
